podservice/src/main/devops/alpine-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-ubuntu
spec:
  containers:
    - name: ubuntu-container
      image: ubuntu:20.04
      imagePullPolicy: IfNotPresent
      command: ["/bin/sleep", "3650d"]
