podservice/src/main/devops/service-clusterip-podservice.yml
apiVersion: v1
kind: Service
metadata:
  name: podservice-service
  labels:
    service: experimental
    category: networkPolicies
spec:
  type: ClusterIP
  ports:
    - targetPort: 9080
      port: 80
      name: dft-port
      protocol: TCP
  selector:
    app: podservice
    type: experimental-network
