podservice/src/main/devops/path-type-prefix-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-type-prefix
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
spec:
  tls:
  - hosts:
      - hogarep.com
    secretName: example-app-tls
  rules:
    - host: es.hogarep.com
      http:
        paths:
          - backend:
              service:
                name: echo1
                port:
                  number: 80
            path: "/"
            pathType: Exact
    - host: hogarep.com
      http:
        paths:
          - backend:
              service:
                name: echo1
                port:
                  number: 80
            path: "/"
            pathType: Exact
    - host: www.hogarep.com
      http:
        paths:
          - backend:
              service:
                name: echo1
                port:
                  number: 80
            path: "/"
            pathType: Exact
    - host: www.hogarep.com
      http:
        paths:
          - backend:
              service:
                name: podservice-service
                port:
                  number: 80
            path: "/svc/gen/id"
            pathType: Exact
